# scanpy_plus

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  install.sh  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  modules.rst  scanpy_plus.data.rst  scanpy_plus.describe.rst  scanpy_plus.get_from_raw.rst  scanpy_plus.globimport.rst  scanpy_plus.io.adata_split.rst  scanpy_plus.io.rst  scanpy_plus.magics.rst  scanpy_plus.pl.haem_markers.rst  scanpy_plus.pl.histplot.rst  scanpy_plus.pl.pca_correlation.rst  scanpy_plus.pl.perma_plot.rst  scanpy_plus.pl.ridgeplot.rst  scanpy_plus.pl.rst  scanpy_plus.pl.splitplot.rst  scanpy_plus.pl.umap3dPlotting.rst  scanpy_plus.pl.umap_allobs.rst  scanpy_plus.pl.umap_grid.rst  scanpy_plus.pl.umap_markers.rst  scanpy_plus.pp.assign_sex.rst  scanpy_plus.pp.cellbender.rst  scanpy_plus.pp.rst  scanpy_plus.rst  scanpy_plus.tl.rst
scanpy_minion/: __init__.py
scanpy_minion/pl/: liana_cc_dotplot.py
scanpy_minion/tl/: __init__.py  liana_cc_rankaggr.py
scanpy_plus/: __init__.py
scanpy_plus/ai/: __init__.py
scanpy_plus/io/: __init__.py  adata_split.py
scanpy_plus/pl/: __init__.py  ridgeplot.py  splitscatter.py  umap3dPlotting.py  umap_grid.py  umap_markers.py
scanpy_plus/pp/: __init__.py  assign_sex.py  cellbender.py  hvg.py
scanpy_plus/recipe/: __init__.py  scverse_vm11.py
scanpy_plus/tl/: __init__.py  gsea.py  rankobs.py  run_scvi.py  scvi.py
scanpy_plus/tl/.ipynb_checkpoints/: scvi-checkpoint.py
tutorials/: 01a_integration.ipynb  test.ipynb  v100.ipynb
