[tool.poetry]
name = "scanpy-plus"
version = "0.1.0"
description = "A suite of commands to supplement scanpy"
authors = ["Vijaya Baskar <vjbaskar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
